Started Integration of FRESteamWorks
I think this is the best way to do this - use CSteam but have our own
wrapper for haxe (since the FRESteamWorks wrapper is for as3). It'll be
a decent amount of work to convert all of those wrapper functions...

--- a/project/build.xml
+++ b/project/build.xml
@@ -17,6 +17,7 @@
         
         <files id="common">
                 <compilerflag value="-Iinclude"/>
+                <file name="FRESteamWorks/CSteam.cpp"/>
                 <file name="common/ExternalInterface.cpp"/>
         </files>
         
