Win/Linux/Mac Stats & Achievements
Added linux and mac targets and have tested on both platforms. Also
included ndlls so you don't have to rebuild. One minor problem on mac is
that it does not copy the steam dylib to the right place (the template
command needs to be modified)?

--- a/project/build.xml
+++ b/project/build.xml
@@ -41,7 +41,9 @@
         
         <target id="NDLL" output="${name_prefix}steamworks${name_extra}" tool="linker" toolid="${ndll-tool}">
                 <outdir name="../ndll/${BINDIR}" />
-                <lib name="steam_api.lib" />
+                <lib name="steam_api.lib" if="windows" />
+                <lib name="lib/linux32/libsteam_api.so" if="linux" />
+                <lib name="lib/osx32/libsteam_api.dylib" if="macos" />
                 <ext value=".ndll" unless="mobile"/>
                 <files id="common"/>
         </target>
